--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,30 +1,28 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="shakeysnake.mango">
+          package="ichbinkaiser.mango">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application android:allowBackup="true"
-        android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher"
-        android:theme="@style/AppTheme">
-
+                 android:icon="@drawable/ic_launcher"
+                 android:label="@string/app_name" >
         <activity
-                android:name="shakeysnake.mango.SplashActivity"
-                android:screenOrientation="portrait" >
+            android:name="ichbinkaiser.mango.SplashActivity"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-                android:name="shakeysnake.mango.MainActivity">
+            android:name="ichbinkaiser.mango.MainActivity">
         </activity>
         <activity
-                android:name="shakeysnake.mango.ScoreActivity">
+            android:name="ichbinkaiser.mango.ScoreActivity">
         </activity>
         <activity
-                android:name="shakeysnake.mango.GameActivity">
+            android:name="ichbinkaiser.mango.GameActivity">
         </activity>
 
     </application>
