Refactored code structure

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
                  android:icon="@drawable/ic_launcher"
                  android:label="@string/app_name" >
         <activity
-            android:name="ichbinkaiser.mango.SplashActivity"
+            android:name="ichbinkaiser.mango.activity.SplashActivity"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,13 +16,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="ichbinkaiser.mango.MainActivity">
+            android:name="ichbinkaiser.mango.activity.MainActivity">
         </activity>
         <activity
-            android:name="ichbinkaiser.mango.ScoreActivity">
+            android:name="ichbinkaiser.mango.activity.ScoreActivity">
         </activity>
         <activity
-            android:name="ichbinkaiser.mango.GameActivity">
+            android:name="ichbinkaiser.mango.activity.GameActivity">
         </activity>
 
     </application>
