--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,12 @@ android {
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                includeCompileClasspath = true
+            }
+        }
     }
     buildTypes {
         release {
@@ -26,4 +32,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     provided 'org.testng:testng:6.9.8'
+    compileOnly 'org.projectlombok:lombok:1.16.18'
 }
